--- a/Progdas/Function.html
+++ b/Progdas/Function.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    
+    <title>Tugas Function</title>
+    <style>
+        .container{
+            background-color:whitesmoke;
+        }
+    </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:ghostwhite">
+        <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="#">Service</a>
+        <a class="navbar-brand" href="#">About</a>
+    </nav>
     
+    <div class="container">
+        <div class="form-group">
+            <h1><center style="font-size: 100%;">RENTAL SEWA MOBIL BERKAH</center></h1>
+            <br>
+            <h2><center style="font-size: 80%;">Masukan Data Peminjam</center></h2>
+            <br>
+
+            <label for="namapeminjam">Nama Peminjam</label>
+            <input type="text" class="form-control" id="txt_namapeminjam" placeholder="Masukan Nama">
+
+            <label for="notelepon">No Telepon</label>
+            <input type="text" class="form-control" id="txt_notelepon" placeholder="Masukan No Telepon">
+
+             <label for="alamat">Alamat</label>
+            <input type="text" class="form-control" id="txt_alamat" placeholder="Masukan Alamat">
+
+            <button class="btn btn-primary m-2" onclick="add()">Simpan</button>
+            <button class="btn btn-success m-2" onclick="update()">Update</button>
+             </div>
+             </div>
+
+        <div class="image">
+            <div class="card float-left m-4" style="width: 20rem;">
+                <img src="mobil elef.jpg" class="card-img-top" alt="Gambar tidak ditemukan">
+
+            </div>
+        </div>
 </body>
 </html>
